--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                             data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
-                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
+                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
                             Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
                         </div>
                         <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
@@ -350,7 +350,7 @@
                 <div class="row clearfix" style="margin-bottom: 50px">
                     <div class="col-lg-7">
                         <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
-                            <h2>Encontrar tu identidad Digital, nunca fue tan fácil.</h2>
+                            <h2>Encontrar tu identidad Digital, nunca fue tan fácil</h2>
                         </div>
                         <p class="lead text-justify">Sabemos que un sitio web es la mejor forma para llegar a cualquier lugar, pero no cualquier sitio web asegura el éxito de tu empresa o compañía.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="nosotros.html">
@@ -484,7 +484,7 @@
                 <div class="row">
                     <div class="col-lg-9">
                         <div class="heading-block center">
-							<h2 class="texto-blanco">Tener presencia en internet nunca fue tan necesario.</h2>
+							<h2 class="texto-blanco">Tener presencia en internet nunca fue tan necesario</h2>
 							<span class="texto-blanco t300">La identidad de tu negocio te espera.</span>
 						</div>
                     </div>
@@ -500,7 +500,7 @@
         <div id="servicios" class="section nomargin boborder" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="heading-block center">
-                    <h2>Ofrecemos los mejores servicios web para ti.</h2>
+                    <h2>Ofrecemos los mejores servicios web para ti</h2>
                 </div>
             </div>
             <div id="oc-features" class="owl-carousel owl-carousel-full image-carousel carousel-widget fixBoton">
@@ -577,7 +577,7 @@
                     </div>
                     <div class="col-lg-9 center">
                         <div class="heading-block">
-                            <h2 class="texto-blanco">Hacemos tus realidad tus sueños por el mejor precio.</h2>
+                            <h2 class="texto-blanco">Hacemos tus realidad tus sueños por el mejor precio</h2>
                             <span class="texto-blanco t300">Obtener tu identidad nunca fue tan fácil.</span>
                         </div>
                     </div>
@@ -587,7 +587,7 @@
         <div id="trabajos" class="section nomargin noborder" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container-fluid">
                 <div class="heading-block center">
-                    <h2>Últimos trabajos web, conoce la calidad de ellos.</h2>
+                    <h2>Últimos trabajos web, conoce la calidad de ellos</h2>
                 </div>
                 <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
                     <div class="slide slide--1">
@@ -638,7 +638,7 @@
                 <div class="row">
                     <div class="col-lg-9">
                         <div class="heading-block center">
-                            <h2 class="texto-blanco">No esperes más  para obtener tu presencia en internet.</h2>
+                            <h2 class="texto-blanco">No esperes más  para obtener tu presencia en internet</h2>
                             <span class="texto-blanco t300">Tu negocio en manos de expertos.</span>
                         </div>
                     </div>
@@ -654,7 +654,7 @@
         <div class="section nomargin noborder" id="testimonios" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="heading-block center">
-                    <h2>Clientes que han confiado en nosotros.</h2>
+                    <h2>Clientes que han confiado en nosotros</h2>
                 </div>
                 <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
                     <div class="oc-item">
@@ -746,7 +746,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
                                     </div>
                                 </div>
-                                <button id="enviar" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Enviar</span>
                                 </button>
@@ -760,10 +760,6 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
-                        <i class="icon-line-arrow-right"></i>
-                        <span>Enviar</span>
-                    </button>
                     <div class="w-100 d-block d-md-block d-lg-none line"></div>
                 </form>
                 <div class="line"></div>
