--- a/us/diseno-grafico.html
+++ b/us/diseno-grafico.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="../css/style.css" type="text/css">
     <link rel="stylesheet" href="../css/swiper.css" type="text/css">
-    <link rel="stylesheet" href="../sweetalert2.min.css">
+    <link rel="stylesheet" href="../css/sweetalert2.min.css">
     
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -437,7 +437,7 @@
                                         <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
                                     </div>
                                 </div>
-                                <button id="enviar" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
                                     <i class="icon-line-arrow-right"></i>
                                     <span>Enviar</span>
                                 </button>
@@ -451,10 +451,6 @@
                             </div>
                         </div>
                     </div>
-                    <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
-                        <i class="icon-line-arrow-right"></i>
-                        <span>Enviar</span>
-                    </button>
                     <div class="w-100 d-block d-md-block d-lg-none line"></div>
                 </form>
                 <div class="line"></div>
