--- a/us/nosotros.html
+++ b/us/nosotros.html
@@ -552,32 +552,32 @@
                 <form name="contac-form" id="contact-form" class="col-lg-12" method="post" action="">
                     <div class="row clearfix">
                         <div class="col-lg-6">
-                            <div class="widget clearfix">
-                                <div class="form-row">
-                                    <div class="form-group col-lg-6">
-                                        <label class="texto-blanco" for="nombre">Nombre (*)</label>
-                                        <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required>
-                                    </div>
-                                    <div class="form-group col-lg-6">
-                                        <label class="texto-blanco" for="correo">Email (*)</label>
-                                        <input type="email" class="form-control" id="correo" name="correo" placeholder="Email" required>
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <div class="form-group col-lg-6">
-                                        <label class="texto-blanco" for="telefono">Numero (*)</label>
-                                        <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Numero" required>
-                                    </div>
-                                    <div class="form-group col-lg-6">
-                                        <label class="texto-blanco" for="asunto">Asunto (*)</label>
-                                        <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
-                                    </div>
-                                </div>
-                                <a href="" id="enviar" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
-                                    <i class="icon-line-arrow-right"></i>
-                                    <span>Enviar</span>
-                                </a>
-                            </div>
+                           <div class="widget clearfix">
+                              <div class="form-row">
+                                 <div class="form-group col-lg-6">
+                                    <label class="texto-blanco" for="nombre">Nombre (*)</label>
+                                    <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required>
+                                 </div>
+                                 <div class="form-group col-lg-6">
+                                    <label class="texto-blanco" for="correo">Email (*)</label>
+                                    <input type="email" class="form-control" id="correo" name="correo" placeholder="Email" required>
+                                 </div>
+                              </div>
+                              <div class="form-row">
+                                 <div class="form-group col-lg-6">
+                                    <label class="texto-blanco" for="telefono">Numero (*)</label>
+                                    <input type="text" class="form-control" id="telefono" name="telefono" placeholder="Numero" required>
+                                 </div>
+                                 <div class="form-group col-lg-6">
+                                    <label class="texto-blanco" for="asunto">Asunto (*)</label>
+                                    <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Cotizaciones, soporte, inquietudes">
+                                 </div>
+                              </div>
+                              <button type="button" id="puto" class="button btn-verde button-3d button-reveal button-large tright button-rounded" style="margin-left: -1px;">
+                                 <i class="icon-line-arrow-right"></i>
+                                 <span>Enviar</span>
+                              </button>
+                           </div>
                         </div>
                         <div class="d-none d-md-block d-lg-none bottommargin-sm"></div>
                         <div class="col-lg-6">
