--- a/nosotros.html
+++ b/nosotros.html
@@ -436,7 +436,7 @@
       <div class="section noborder nomargin" id="testimonios" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
          <div class="container">
             <div class="heading-block center">
-               <h2>Clientes que han confiado en nosotros.</h2>
+               <h2>Clientes que han confiado en nosotros</h2>
             </div>
             <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
                <div class="oc-item">
@@ -495,7 +495,7 @@
                   </div>
                </div>
             </div>
-            <div class="line"></div>
+            <!-- <div class="line"></div>
             <div class="heading-block center">
                <h2>¿Tienes dudas? mira las Preguntas Frecuentes</h2>
             </div>
@@ -539,7 +539,7 @@
                      </div>
                   </div>
                </div>
-            </div>
+            </div> -->
          </div>
       </div>
    </section>
