--- a/us/nosotros.html
+++ b/us/nosotros.html
@@ -495,7 +495,7 @@
                   </div>
                </div>
             </div>
-            <div class="line"></div>
+            <!-- <div class="line"></div>
             <div class="heading-block center">
                <h2>¿Tienes dudas? mira las Preguntas Frecuentes</h2>
             </div>
@@ -539,7 +539,7 @@
                      </div>
                   </div>
                </div>
-            </div>
+            </div> -->
          </div>
       </div>
    </section>
