--- a/us/index.html
+++ b/us/index.html
@@ -170,7 +170,7 @@
                         </li>
                         <li>
                             <a href="#">
-                                <div></div>
+                                <div>Language</div>
                             </a>
                             <ul class="colorLink">
                                 <li>
