--- a/us/index.html
+++ b/us/index.html
@@ -351,7 +351,7 @@
                 <div class="row clearfix" style="margin-bottom: 50px">
                     <div class="col-lg-7">
                         <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
-                            <h2>FINDING YOUR IDENTITY HAS NEVER BEEN EASIER.</h2>
+                            <h2>Finding your identity has never been easier</h2>
                         </div>
                         <p class="lead text-justify">We know that a website is the best way to get anywhere, but not just any website ensures the success of your business or company.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="nosotros.html">
@@ -371,7 +371,7 @@
                                     <i class="icon-lightbulb i-alt"></i>
                                 </a>
                             </div>
-                            <h3 class="texto-verde">WE KNOW YOUR IDEA.</h3>
+                            <h3 class="texto-verde">We know your idea.</h3>
                             <p class="lead text-justify" style="font-size: 18px !important;">We learn to visualize what you want for your business in the digital world.</p>
                         </div>
                     </div>
@@ -382,7 +382,7 @@
                                     <i class="icon-pencil-alt i-alt"></i>
                                 </a>
                             </div>
-                            <h3 class="texto-verde">WE DESIGN</h3>
+                            <h3 class="texto-verde">We Design</h3>
                             <p class="lead text-justify" style="font-size: 18px !important;">We transform your idea into a unique design for your web identity.</p>
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                                     <i class="icon-wrench1 i-alt"></i>
                                 </a>
                             </div>
-                            <h3 class="texto-verde">WE DEVELOP</h3>
+                            <h3 class="texto-verde">We Develop</h3>
                             <p class="lead text-justify" style="font-size: 18px !important;">We have a vast experience in custom web design.</p>
                         </div>
                     </div>
@@ -404,7 +404,7 @@
                                     <i class="icon-thumbs-up i-alt"></i>
                                 </a>
                             </div>
-                            <h3 class="texto-verde">WE DELIVER IDENTITY</h3>
+                            <h3 class="texto-verde">We delivery Identity</h3>
                             <p class="lead text-justify" style="font-size: 18px !important;">We finish all your ideas and make them come true at the best price.</p>
                         </div>
                     </div>
@@ -416,7 +416,7 @@
                 <div class="heading-block center">
                     <h2>
                         <div class="text-rotater texto-blanco" data-separator="|" data-rotate="flipInX" data-speed="2500">
-                            CREATIVOSPLUS IS FOR YOUR BUSINESS<span class="t-rotate">Identity|Profit|Presence</span>
+                        CreativosPlus is for your business<span class="t-rotate">Identity|Profit|Presence</span>
                         </div>
                     </h2>
                 </div>
@@ -485,7 +485,7 @@
                 <div class="row">
                     <div class="col-lg-9">
                         <div class="heading-block center">
-							<h2 class="texto-blanco">HAVING A PRESENCE ON THE INTERNET HAS NEVER BEEN SO NECESSARY.</h2>
+							<h2 class="texto-blanco">Having a presence on the internet has never been so necessary.</h2>
 							<span class="texto-blanco t300">The identity of your business awaits you.</span>
 						</div>
                     </div>
@@ -501,7 +501,7 @@
         <div id="servicios" class="section nomargin boborder" style="background: url('../images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="heading-block center">
-                    <h2>WE OFFER THE BEST WEB SERVICES FOR YOU.</h2>
+                    <h2> We offer the best web services for you.</h2>
                 </div>
             </div>
             <div id="oc-features" class="owl-carousel owl-carousel-full image-carousel carousel-widget fixBoton">
@@ -579,7 +579,7 @@
                     </div>
                     <div class="col-lg-9 center">
                         <div class="heading-block">
-                            <h2 class="texto-blanco">WE MAKE YOUR DREAMS COME TRUE FOR THE BEST PRICE.</h2>
+                            <h2 class="texto-blanco">We make your dreams come true for the best price.</h2>
                             <span class="texto-blanco t300">Getting your identity has never been easier.</span>
                         </div>
                     </div>
@@ -656,7 +656,7 @@
         <div class="section nomargin noborder" id="testimonios" style="background: url('../images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="heading-block center">
-                    <h2>CLIENTS WHO HAVE TRUSTED US.</h2>
+                    <h2>Clients who have trusted us.</h2>
                 </div>
                 <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
                     <div class="oc-item">
