--- a/us/index.html
+++ b/us/index.html
@@ -126,7 +126,7 @@
                         </li>
                         <li>
                             <a href="nosotros.html">
-                                <div>Us</div>
+                                <div>About Us</div>
                             </a>
                         </li>
                         <li>
