--- a/us/index.html
+++ b/us/index.html
@@ -298,7 +298,7 @@
                             data-textAlign="['inherit','inherit','inherit','inherit']"
                             style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Poppins;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
                             <i class="icon-line-arrow-right"></i>
-                            <span>Contáctanos</span>
+                            <span>Contact Us</span>
                         </div>
                         <div class="tp-caption tp-svg-layer" 
 			                id="slide-1-layer-4" 
