--- a/us/trabajos.html
+++ b/us/trabajos.html
@@ -113,7 +113,7 @@
                     <a href="index.html" class="standard-logo" data-sticky-logo="../images/logos/logo.png">
                         <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
-                    <a href="index.html" class="retina-logo" data-sticky-logo="../images/logos/logo.png">
+                    <a href="index.html" class="retina-logo" data-sticky-logo="images/logos/logo.png">
                         <img style="margin-right:50px" src="../images/logos/logoblanco.png" alt="CreativosPlus">
                     </a>
                 </div>
@@ -126,27 +126,27 @@
                         </li>
                         <li>
                             <a href="nosotros.html">
-                                <div>Nosotros</div>
+                                <div>About Us</div>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <div>Servicios</div>
+                                <div>Services</div>
                             </a>
                             <ul class="colorLink">
                                 <li>
                                     <a href="diseno-web.html">
-                                        <div>Diseño Web</div>
+                                        <div>Web Design</div>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="diseno-grafico.html">
-                                        <div>Diseño Gráfico</div>
+                                        <div>Graphic Design</div>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="marketing.html">
-                                        <div>Marketing Digital</div>
+                                        <div>Digital Marketing</div>
                                     </a>
                                 </li>
                                 <li>
@@ -160,24 +160,24 @@
                     <ul class="one-page-menu" data-easing="easeInOutExpo" data-speed="1250" data-offset="160">
                         <li>
                             <a href="trabajos.html">
-                                <div>Trabajos</div>
+                                <div>Our Works</div>
                             </a>
                         </li>
                         <li>
                             <a href="#" data-href="#footer">
-                                <div>Contacto</div>
+                                <div>Contact</div>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <div>Idioma</div>
+                                <div>Language</div>
                             </a>
                             <ul class="colorLink">
                                 <li>
                                     <a href="../index.html">
                                         <div>
                                             <img src="../images/icons/spain.png" width="20" height="20" style="margin-right: 5px" alt="">
-                                            Español
+                                            Spanish
                                         </div>
                                     </a>
                                 </li>
@@ -185,7 +185,7 @@
                                     <a href="index.html">
                                         <div>
                                             <img src="../images/icons/usa.png" width="20" height="20" style="margin-right: 5px" alt="">
-                                            Ingles
+                                            English
                                         </div>
                                     </a>
                                 </li>
@@ -298,7 +298,7 @@
                             data-textAlign="['inherit','inherit','inherit','inherit']"
                             style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Open Sans;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
                             <i class="icon-line-arrow-right"></i>
-                            <span>Contáctanos</span>
+                            <span>Contact Us</span>
                         </div>
                         <div class="tp-caption tp-svg-layer" 
 			                id="slide-1-layer-4" 
